# open-watchlists-for-kite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/open_watchlists/: __init__.py  _data.py  _resolve.py  live.py  source.py  update.py  watchlist.py
src/open_watchlists/data/: _manifest.json  banknifty.txt  nifty100.txt  nifty200.txt  nifty50.txt  nifty500.txt  nifty_auto.txt  nifty_energy.txt  nifty_financial_services.txt  nifty_fmcg.txt  nifty_it.txt  nifty_metal.txt  nifty_midcap150.txt  nifty_next50.txt  nifty_pharma.txt  nifty_realty.txt
tests/: test_live.py  test_source.py  test_watchlist.py
